# GameEngine

./: CMakeLists.txt  main.c
Empty/: EmptyApplication.cpp
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  GraphicsManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
